--- a/home/about.html
+++ b/home/about.html
@@ -168,13 +168,13 @@
 		</div>
 		<div class="team">
 			<div class="person">
-				<img src="https://s-media-cache-ak0.pinimg.com/originals/b1/14/12/b11412e075e83c301c28a4c33fd1cd35.jpg">
+				<img src="../image/moxita.jpg">
 				<h1>Moxita Shah</h1>
-				<span>Team-leader</span>
+				<span>Backend</span>
 				<div class="social-media">
 					<a href="https://www.instagram.com/moxitashahh" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/instagram-128.png"></a>
 					<a href="https://twitter.com/webcoder4" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/twitter-128.png"></a>
-					<a href="https://www.linkedin.com/in/khaled-mohamaed-638608108/" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/linkedin-128.png"></a>
+					<a href="https://www.linkedin.com/in/moxita-shah-2b4316224?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/linkedin-128.png"></a>
 				</div>
 			</div>
 			<div class="person">
@@ -190,17 +190,17 @@
 			<div class="person">
 				<img src="https://s-media-cache-ak0.pinimg.com/736x/de/8e/75/de8e7544ac38c551078723bb5fb247d8--beard-and-mustache-styles-beards-and-mustaches.jpg	">
 				<h1>Punit Jain</h1>
-				<span>Coder</span>
+				<span>Frontend Designer</span>
 				<div class="social-media">
 					<a href="https://www.instagram.com/punittjainn" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/instagram-128.png"></a>
 					<a href="https://twitter.com/webcoder4" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/twitter-128.png"></a>
-					<a href="https://www.linkedin.com/in/khaled-mohamaed-638608108/" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/linkedin-128.png"></a>
+					<a href="https://www.linkedin.com/in/punit-ashok-jain-a6221528a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/linkedin-128.png"></a>
 				</div>
 			</div>
 			<div class="person">
 				<img src="../image/neeraj.jpg">
 				<h1>Neeraj Sawant</h1>
-				<span>Coder</span>
+				<span>Documentation</span>
 				<div class="social-media">
 					<a href="https://www.instagram.com/_neerajjj_1/" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/instagram-128.png"></a>
 					<a href="https://twitter.com/_neerajjj_1" target="_blank"t><img src="https://cdn0.iconfinder.com/data/icons/social-media-2119/154/twitter-128.png"></a>
