--- a/tech/tech.html
+++ b/tech/tech.html
@@ -40,6 +40,7 @@
             <div class="widget"></div>
         </div>
         <div class="dashboard">
+            <h1 id="titletwo">Technology</h1> 
             <div class="quiz-container">
                 <h1 id="quizTitle">Quiz Time!</h1>
                 <div id="question"></div>
