--- a/home/test.html
+++ b/home/test.html
@@ -56,41 +56,45 @@ svg {
     </style>
 </head>
 <body>
-    <div class="preview">
-      <h1>Welcome to Our Website</h1>
-      <p>Get ready for an amazing experience!</p>
-      <a href="./home/main.html">Enter</a>
-    </div>
     <svg viewBox="0 0 100 100">
         <g stroke-width="20">
             <g transform="rotate(0 50 50)">
                 <circle cx="50" cy="50" r="0" stroke="#012" stroke-dasharray="0 9 6 4 5" fill="none">
-                    <animate attributeName="r" values="0; 100" dur="30s" begin="0s" repeatCount="indefinite" />
+                    <animate attributeName="r" values="0; 100" dur="5s" begin="0s" repeatCount="1" />
                 </circle>
             </g>
             <g transform="rotate(60 50 50)">
                 <circle cx="50" cy="50" r="0" stroke="#345" stroke-dasharray="4 8 4 6 2" fill="none">
-                    <animate attributeName="r" values="0; 100" dur="30s" begin="-2s" repeatCount="indefinite" />
+                    <animate attributeName="r" values="0; 100" dur="5s" begin="-2s" repeatCount="1" />
                 </circle>
             </g>
             <g transform="rotate(120 50 50)">
                 <circle cx="50" cy="50" r="0" stroke="#678" stroke-dasharray="2 7 9 9 6" fill="none">
-                    <animate attributeName="r" values="0; 100" dur="30s" begin="-4s" repeatCount="indefinite" />
+                    <animate attributeName="r" values="0; 100" dur="5s" begin="-4s" repeatCount="1" />
                 </circle>
             </g>
             <g transform="rotate(180 50 50)">
                 <circle cx="50" cy="50" r="0" stroke="#9ab" stroke-dasharray="8 8 3 7 7" fill="none">
-                    <animate attributeName="r" values="0; 100" dur="30s" begin="-6s" repeatCount="indefinite" />
+                    <animate attributeName="r" values="0; 100" dur="5s" begin="-6s" repeatCount="1" />
                 </circle>
             </g>
             <g transform="rotate(240 50 50)">
                 <circle cx="50" cy="50" r="0" stroke="#cde" stroke-dasharray="1 5 6 7 5" fill="none">
-                    <animate attributeName="r" values="0; 100" dur="30s" begin="-8s" repeatCount="indefinite" />
+                    <animate attributeName="r" values="0; 100" dur="5s" begin="-8s" repeatCount="1" />
                 </circle>
             </g>
         </g>
     </svg>
+    <div class="preview">
+      <h1>Welcome to Our Website</h1>
+      <a href="main.html" id="enter">Enter</a>
+    </div>
+   
   
-    
+    <script>
+        document.getElementById("enter").addEventListener("click", function() {
+    window.location.href = "main.html";
+});
+    </script>
 </body>
 </html>
