--- a/business/business.html
+++ b/business/business.html
@@ -13,7 +13,7 @@
         <div class="joint">
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                   Menu
+                    &#9776;
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="../register/login/profile.html">Profile</a>
@@ -34,14 +34,56 @@
     </div>
    <div class="whole">
     <div class="widgets">
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://ichef.bbci.co.uk/images/ic/1024xn/p0hr04xg.jpg.webp" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Boycotts aren't the only way to hold companies accountable.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p><br>A growing group of conscious consumers have found other strategies to keep companies honest. <a href="https://www.bbc.com/worklife/article/20240415-product-boycotts-conscious-consumerism">read more</a></p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://www.usnews.com/object/image/0000018f-1a6e-d394-a5ff-9b7ed7ad0000/8d0dcc4bf7cd4a7985ad7d1c19572933Consumer_Spending_20366.jpg?update-time=1714134674000&size=responsive970" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Fed's Preferred Inflation Gauge Shows Price Pressures Stayed Elevated Last Month.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p><br>A measure of inflation closely tracked by the Federal Reserve remained uncomfortably high in March <a href="https://www.usnews.com/news/business/articles/2024-04-26/feds-preferred-inflation-gauge-shows-price-pressures-stayed-elevated-last-month">read more</a></p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://www.usnews.com/object/image/0000018f-0a6a-d8dc-abcf-0bee43570000/a52b7b00744841958eb7ed2861906644Tesla%27s_Future_91455.jpg?update-time=1713866530000&size=responsive970" alt="">
+            </div>
+            <div class="widget-content">
+                <!-- <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2> -->
+            </div>
+            <div class="widget-content-two">
+                <h3 style="text-decoration: underline;">US Probes Whether Tesla Autopilot Recall Did Enough to Make Sure Drivers Pay Attention <a href="https://www.usnews.com/news/business/articles/2024-04-26/us-probes-whether-recall-of-tesla-autopilot-driving-system-did-enough-to-make-sure-drivers-attention">read more</a></h3>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://ichef.bbci.co.uk/news/1024/cpsprodpb/D611/production/_133210845_gettyimages-1242810847.jpg.webp" alt="">
+            </div>
+            <div class="widget-content">
+                <!-- <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2> -->
+            </div>
+            <div class="widget-content-two">
+                <h3 style="text-decoration: underline;">What's behind a dramatic fall in Indian families' savings
+                <a href="https://www.bbc.com/news/world-asia-india-68874403">read more</a></h3>
+            </div>
+        </div>
+        <!-- <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
+        <div class="widget"></div> -->
     </div>
     <div class="dashboard">
         <h1 id="titletwo">Business</h1> 
