--- a/entertainment/enter.html
+++ b/entertainment/enter.html
@@ -13,7 +13,7 @@
         <div class="joint">
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                   Menu
+                    &#9776;
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="../register/login/profile.html">Profile</a>
@@ -34,14 +34,57 @@
     </div>
    <div class="whole">
     <div class="widgets">
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:2040x1360/750x500/filters:focal(1020x680:1021x681):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25378907/STK088_SPOTIFY_CVIRGINIA_C.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Apple blocked Spotify’s latest EU update, again</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>Spotify submitted a new version of its iOS app with in-app pricing information for users in the European Union <a href="https://www.theverge.com/2024/4/24/24139335/spotify-apple-eu-ios-app-update-submission-antitrust-dma">read more</a></p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:1920x1080/1440x960/filters:focal(960x540:961x541):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25415535/SB_Demo_PR_Roll_Screenshots_Prologue_06.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Stellar Blade on PS5 has flash and fun but is mostly dull</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>During the opening moments of Stellar Blade, the protagonist, Eve, runs along an enemy-infested beach while huge explosions <a href="https://www.theverge.com/24139050/stellar-blade-review-ps5-exclusive">read more</a></p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:1280x720/750x500/filters:focal(640x360:641x361):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25417925/garrys_mod_screenshot.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <!-- <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2> -->
+            </div>
+            <div class="widget-content-two">
+                <h3 style="text-decoration: underline;">Garry’s Mod is taking down decades of Nintendo-related add-ons <a href="https://www.theverge.com/2024/4/25/24140246/garrys-mod-nintendo-copyright-takedowns-dmca">read more</a></h3>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="https://duet-cdn.vox-cdn.com/thumbor/0x0:1920x1080/640x640/filters:focal(963x787:964x788):format(webp)/cdn.vox-cdn.com/uploads/chorus_asset/file/25415839/Screenshot_08.png" alt="">
+            </div>
+            <div class="widget-content">
+                <!-- <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2> -->
+            </div>
+            <div class="widget-content-two">
+                
+                <h3  style="text-decoration: underline;">Another Crab’s Treasure is a cheery, accessible take on Dark Souls
+                <a href="https://www.theverge.com/24139208/another-crabs-treasure-review-xbox-switch-ps5">read more</a> </h3>
+            </div>
+        </div>
+        <!-- <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
+        <div class="widget"></div> -->
     </div>
     <div class="dashboard">
         <h1 id="titletwo">Entertainment</h1>
