--- a/social/social.html
+++ b/social/social.html
@@ -13,7 +13,7 @@
         <div class="joint">
             <div class="dropdown-container">
                 <button onclick="toggleDropdown()" class="dropdown-button">
-                   Menu
+                    &#9776;
                 </button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="../register/login/profile.html">Profile</a>
@@ -34,14 +34,55 @@
     </div>
    <div class="whole">
     <div class="widgets">
+        <div class="widget">
+            <div class="widget-img">
+                <img src="" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse ducimus doloribus omnis ipsum dolor rem illum vero alias, quo culpa!</p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="../image/harsh.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse ducimus doloribus omnis ipsum dolor rem illum vero alias, quo culpa!</p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="../image/harsh.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse ducimus doloribus omnis ipsum dolor rem illum vero alias, quo culpa!</p>
+            </div>
+        </div>
+        <div class="widget">
+            <div class="widget-img">
+                <img src="../image/harsh.jpg" alt="">
+            </div>
+            <div class="widget-content">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing.</h2>
+            </div>
+            <div class="widget-content-two">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse ducimus doloribus omnis ipsum dolor rem illum vero alias, quo culpa!</p>
+            </div>
+        </div>
+        <!-- <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
         <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
-        <div class="widget"></div>
+        <div class="widget"></div> -->
     </div>
     <div class="dashboard">
         <h1 id="titletwo">Social Issues</h1>
