--- a/register/login/profile.html
+++ b/register/login/profile.html
@@ -11,11 +11,11 @@
         <div class="userProfilePicture" id="userProfilePhoto"><img src="" alt=""></div>
     </div>
     <div class="lit-content">
-        <h1>Profile</h1>
+        <h1>Update Profile</h1>
         <h3>Spill the tea: Give us the deets on your GenZ journey</h3>
     </div>
     <div class="profile-section">
-        <div class="profile">
+        <!-- <div class="profile">
         <div class="profilePageContainer">
 
             <h1>Profile</h1>
@@ -28,14 +28,14 @@
                 <div class="points">238 <br> points</div>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, asperiores.</p>
-        </div>
+        </div> -->
         
         <div class="edit-details">
             <div class="save-cancel">
                 <h3>Basic Info</h3>
                     <div class="button-sc">
                         <button id="save" name="save">Save</button>
-                        <button>Cancel</button>
+                        <button ><a href="../../home/main.html">Home</a></button>
                     </div>
             </div>
             <form>
