--- a/business/business.html
+++ b/business/business.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="profile">
-                <img src="../image/profile.png" alt="" id="profileimage">
+                <a href="../register/login/main_profile.html"><img src="../image/profile.png" alt="" id="profileimage"></a>
             </div>
         </div>
     </div>
