--- a/forum/detail.html
+++ b/forum/detail.html
@@ -48,24 +48,24 @@
              <!--Original thread-->
              <div class="head">
                 <div class="authors">Author</div>
-                <div class="content">Topic: random topic (Read 1325 Times)</div>
+                <div class="content">Topic: AI Boon or a Bane ?</div>
             </div>
             <div class="body" id="post-123">
                 <div class="authors">
-                    <div class="username"><a href="">Username</a></div>
+                    <div class="username"><a href="">Moxita Shah</a></div>
                     <!-- <div>Role</div> -->
                     <img src="https://cdn.pixabay.com/photo/2015/11/06/13/27/ninja-1027877_960_720.jpg" alt="">
                     <!-- <div>Posts: <u>45</u></div>
                     <div>Points: <u>5423</u></div> -->
                 </div>
                 <div class="content">
-                    Just a comment of the above random topic.
-                    <br>To see how it looks like.
+                    Is AI a boon or a bane for society at large?
+                    <!-- <br>To see how it looks like. -->
                     <br><br>
-                    Nothing more and nothing less.
+                    <!-- Nothing more and nothing less. -->
                     <br><br>
                     <hr>
-                    Regards Username
+                    Regards Moxita Shah
 
                     <div class="comment">
                         <button id="comment-button">Comment</button>
@@ -82,18 +82,18 @@
         <!-- show comments  -->
         <div class="comments-container">
             <!--Original thread-->
-            <div class="head">
+            <!-- <div class="head">
                <div class="authors">Author</div>
                <div class="content">Comments</div>
-           </div>
-           <div class="body">
-               <div class="authors">
-                   <div class="AnotherUser"><a href="">Username</a></div>
+           </div> -->
+           <!-- <div class="body"> -->
+               <!-- <div class="authors"> -->
+                   <!-- <div class="AnotherUser"><a href="">Username</a></div> -->
                    <!-- <div>Role</div> -->
-                   <img src="https://cdn.pixabay.com/photo/2015/11/06/13/27/ninja-1027877_960_720.jpg" alt="">
+                   <!-- <img src="https://cdn.pixabay.com/photo/2015/11/06/13/27/ninja-1027877_960_720.jpg" alt=""> -->
                    
-               </div>
-               <div class="content">
+               <!-- </div> -->
+               <!-- <div class="content">
                    Just a comment of the above random topic.
                    <br>To see how it looks like.
                    <br><br>
@@ -105,14 +105,14 @@
                    <div class="comment">
                         <button id="reply-button">Reply</button>
                    </div>
-               </div>
+               </div> -->
            </div>
        </div>
         <!-- reply input  -->
-        <div class="comment-area hide" id="reply-area">
+        <!-- <div class="comment-area hide" id="reply-area">
             <textarea name="comment" id="" placeholder="reply here ... "></textarea>
             <input type="submit" id="submit_comment" value="Submit">
-        </div>
+        </div> -->
 
 
 </div>
