--- a/home/main.html
+++ b/home/main.html
@@ -145,7 +145,7 @@
             <h5 style="font-weight: lighter;">-music</h5>
             <h5 style="font-weight: lighter;">-games</h5>
             <h5 style="font-weight: lighter;">-or whatever floats your boat, we've got you covered.</h5>
-            <button class="btn btn-outline-success my-2 my-sm-0" id="start-exploringa" style="background: rgba(128, 128, 128, 0.515); color: white;">Start Exploring-></button>
+            <button class="btn btn-outline-success my-2 my-sm-0" id="start-exploringb" style="background: rgba(128, 128, 128, 0.515); color: white;">Start Exploring-></button>
           
           </div>
       </div>
@@ -361,7 +361,7 @@
         <div class="widget">
           <div class="widget-img"><img src="https://www.usnews.com/object/image/0000018f-1a6e-d394-a5ff-9b7ed7ad0000/8d0dcc4bf7cd4a7985ad7d1c19572933Consumer_Spending_20366.jpg?update-time=1714134674000&size=responsive970" alt=""></div>
           <div class="widget-content">
-            <h3> Fed's Preferred Inflation Gauge Shows Price Pressures Stayed Elevated Last Month:</h3>
+            <h3><br> Fed's Preferred Inflation Gauge Shows Price Pressures:</h3>
           </div>
           <div class="widget-content-two">
             <p><br>A measure of inflation closely tracked by the Federal Reserve remained uncomfortably high in March<a href="">read more</a></p>
