--- a/home/test.html
+++ b/home/test.html
@@ -208,8 +208,8 @@ a{
           <span aria-hidden="true" style="font-family: cursive;">genZhub</span>
         </h1>
       </div>
-
-      <a href="../register/login/register.html">Login</a>
+      <h1>Click here to enter the world of genZ</h1>  
+      <a href="../home/main.html">Login</a>
   
     
 </body>
