--- a/home/test.html
+++ b/home/test.html
@@ -161,6 +161,15 @@ a{
     font-size: 18px;
     margin-left: 100vh;
 }
+#descrip{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-left: 30%; */
+  color: white;
+  /* padding-left: 50%; */
+  margin-bottom: 20px;
+}
 
     </style>
 </head>
@@ -208,8 +217,8 @@ a{
           <span aria-hidden="true" style="font-family: cursive;">genZhub</span>
         </h1>
       </div>
-      <h1>Click here to enter the world of genZ</h1>  
-      <a href="../home/main.html">Login</a>
+      <h3 id="descrip">Click here to enter the world of genZ</h3>  
+      <a href="../home/main.html">Home</a>
   
     
 </body>
